--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"license": "ISC",
 	"dependencies": {
 		"body-parser": "^1.18.3",
+		"cloudinary": "^1.11.0",
 		"concurrently": "^4.0.1",
 		"cors": "^2.8.4",
 		"dotenv": "^6.0.0",
